--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,8 @@
     <title>Tela inicial</title>
 </head>
 <body>
-    <h1>Aqui vai tela inicial</h1>
+    <h1> <%= titulo %> </h1>
+
+    <script src="/assets/js/bundle.js"></script>
 </body>
 </html>
